pass total records to the training summary component and use to show the no records message

--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -33,6 +33,7 @@
     [workplace]="workplace"
     [workers]="workers"
     [workerCount]="workerCount"
+    [totalRecords]="totalRecords"
   ></app-training-and-qualifications-summary>
 
   <ng-container *ngIf="viewTrainingByCategory && trainingCategories?.length > 0">
