--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -1,47 +1,51 @@
-<div class="govuk-!-margin-bottom-6">
-  <div
-    [ngClass]="
-      showSearchBar ? 'govuk-grid-row' : 'govuk__flex-stack govuk__align-items-flex-end govuk__justify-content-end'
-    "
-  >
-    <div *ngIf="showSearchBar" class="govuk-grid-column-three-quarters">
-      <app-search-input
-        label="Search by name or ID number"
-        accessibleLabel="staff training records"
-        [prevSearch]="searchTerm"
-        (emitInput)="handleSearch($event)"
-      ></app-search-input>
-    </div>
-    <div class="govuk-grid-column-three-quarters" *ngFor="let workerTandQCount of workers">
-      <span *ngIf="workerTandQCount.trainingCount + workerTandQCount.qualificationCount == 0">
-        <p>
-          You need to click on the name or ID number of the person you want to <br />
-          add a training or qualification record for.
-        </p>
-      </span>
-    </div>
-    <div
-      class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
-      [ngClass]="showSearchBar ? '' : 'govuk-!-padding-0'"
-    >
-      <label class="govuk-label" for="sortByTrainingStaff"> Sort by </label>
-      <select
-        class="govuk-select govuk-!-width-full"
-        id="sortByTrainingStaff"
-        name="sortByTrainingStaff"
-        [value]="sortByValue"
-        (change)="handleSortUpdate($event.target.value)"
-      >
-        <option
-          *ngFor="let sortTrainingAndQualsOption of sortTrainingAndQualsOptions | keyvalue"
-          value="{{ sortTrainingAndQualsOption.key }}"
-        >
-          {{ sortTrainingAndQualsOption.value }}
-        </option>
-      </select>
-    </div>
+<div class="govuk-grid-row" *ngIf="totalRecords === 0" data-testid="noRecords">
+  <div class="govuk-grid-column-three-quarters">
+    <p>
+      You need to click on the name or ID number of the person you want to <br />
+      add a training or qualification record for.
+    </p>
   </div>
 </div>
+
+<div
+  [ngClass]="
+    showSearchBar ? 'govuk-grid-row' : 'govuk__flex-stack govuk__align-items-flex-end govuk__justify-content-end'
+  "
+  class="govuk-!-margin-bottom-6"
+>
+  <div *ngIf="showSearchBar" class="govuk-grid-column-three-quarters">
+    <app-search-input
+      label="Search by name or ID number"
+      accessibleLabel="staff training records"
+      [prevSearch]="searchTerm"
+      (emitInput)="handleSearch($event)"
+    ></app-search-input>
+  </div>
+
+  <div
+    data-testid="sortBy"
+    *ngIf="workerCount > 1"
+    class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
+    [ngClass]="showSearchBar ? '' : 'govuk-!-padding-0'"
+  >
+    <label class="govuk-label" for="sortByTrainingStaff"> Sort by </label>
+    <select
+      class="govuk-select govuk-!-width-full"
+      id="sortByTrainingStaff"
+      name="sortByTrainingStaff"
+      [value]="sortByValue"
+      (change)="handleSortUpdate($event.target.value)"
+    >
+      <option
+        *ngFor="let sortTrainingAndQualsOption of sortTrainingAndQualsOptions | keyvalue"
+        value="{{ sortTrainingAndQualsOption.key }}"
+      >
+        {{ sortTrainingAndQualsOption.value }}
+      </option>
+    </select>
+  </div>
+</div>
+
 <table *ngIf="workerCount; else noWorkersFoundInSearch" class="govuk-table" data-testid="training-worker-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
