--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -2,7 +2,7 @@
   <div class="govuk-grid-column-three-quarters">
     <p>
       You need to click on the name or ID number of the person you want to <br />
-      add a training or qualification record for.
+      add a training record for.
     </p>
   </div>
 </div>
