--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -41,7 +41,7 @@
     data-testid="trainingAndQualsCategories"
     [workplace]="workplace"
     [trainingCategories]="trainingCategories"
-    [totalRecords]="totalRecords"
+    [totalTraining]="totalTraining"
   ></app-training-and-qualifications-categories>
 </ng-container>
 <ng-template #noStaffRecords>
