--- a/src/app/shared/components/workplace-summary/workplace-summary.component.html
+++ b/src/app/shared/components/workplace-summary/workplace-summary.component.html
@@ -257,9 +257,9 @@
           <span *ngSwitchCase="'No'"> None </span>
           <div *ngSwitchCase="'Yes'">
             <ul class="govuk-list govuk-!-margin-bottom-0">
-              <ng-container *ngFor="let categories of workplace.otherServices.services">
-                <li *ngFor="let service of filterAndSortOtherServices(categories.services)">
-                  {{ service.name }}<ng-container *ngIf="service.other"> - {{ service.other }}</ng-container>
+              <ng-container *ngFor="let service of filterAndSortOtherServices(workplace.otherServices.services)">
+                <li>
+                  {{ service.name }}<ng-container *ngIf="service.other">: {{ service.other }}</ng-container>
                 </li>
               </ng-container>
             </ul>
