add table pagination wrapper to the training and quals summary table

--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -5,6 +5,7 @@
   [sortByParamMap]="sortByParamMap"
   [sortByValue]="sortByValue"
   [sortOptions]="sortStaffOptions"
+  accessibleLabel="for staff records"
   (fetchWorkers)="getPageOfWorkers($event)"
 >
   <table *ngIf="workerCount; else noWorkersFound" class="govuk-table">
