--- a/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
+++ b/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
@@ -2,7 +2,8 @@
   <div *ngIf="totalWorkerCount > itemsPerPage" class="govuk-grid-column-three-quarters" data-testid="search">
     <app-search-input
       ref="trainingRecordSearch"
-      accessibleLabel="for staff records"
+      [accessibleLabel]="accessibleLabel"
+      [label]="label"
       [prevSearch]="searchTerm"
       (emitInput)="handleSearch($event)"
     ></app-search-input>
@@ -13,7 +14,12 @@
   >
     <div class="govuk-form-group">
       <label class="govuk-label" for="sortByStaff"> Sort by </label>
-      <select class="govuk-select" id="sortByStaff" name="sortByStaff" (change)="sortBy($event.target.value)">
+      <select
+        class="govuk-select govuk-!-width-full"
+        id="sortByStaff"
+        name="sortByStaff"
+        (change)="sortBy($event.target.value)"
+      >
         <option *ngFor="let option of sortOptions | keyvalue" value="{{ option.key }}">
           {{ option.value }}
         </option>
