Change texts and hints for activate user flow

--- a/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
+++ b/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
@@ -27,9 +27,7 @@
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
         <fieldset class="govuk-fieldset" aria-describedby="termsAndConditions-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-            <h2 class="govuk-fieldset__heading">
-              Are these details correct?
-            </h2>
+            <h2 class="govuk-fieldset__heading">Are these details correct?</h2>
           </legend>
           <span id="termsAndConditions-hint" class="govuk-hint">
             Check the box to confirm you agree to the
@@ -61,9 +59,7 @@
       </div>
 
       <div class="govuk-button-group">
-        <button type="submit" class="govuk-button">
-          Submit
-        </button>
+        <button type="submit" class="govuk-button">Submit details</button>
       </div>
     </form>
   </div>
