--- a/src/app/features/activate-user-account/security-question/security-question.component.html
+++ b/src/app/features/activate-user-account/security-question/security-question.component.html
@@ -6,12 +6,13 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <span class="govuk-caption-l">User account</span>
-          <h1 class="govuk-fieldset__heading">
-            Create security question
-          </h1>
+          <h1 class="govuk-fieldset__heading">Create and answer your security question</h1>
         </legend>
 
-        <p>You will need this if you forget your username or if you speak to Skills for Care about your account.</p>
+        <p class="govuk-!-margin-bottom-4">
+          You'll need to be able to answer this question if you forget your username or need to speak to Skills for Care
+          about your account.
+        </p>
 
         <ng-container *ngFor="let item of formControlsMap">
           <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get(item.name).errors">
