--- a/src/app/features/activate-user-account/create-username/create-username.component.html
+++ b/src/app/features/activate-user-account/create-username/create-username.component.html
@@ -5,14 +5,13 @@
   [serverError]="serverError"
 >
 </app-error-summary>
-
-<form #formEl novalidate (ngSubmit)="checkUsernameDoesntExist()" [formGroup]="form" id="server-error">
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds-from-desktop">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds-from-desktop">
+    <form #formEl novalidate (ngSubmit)="checkUsernameDoesntExist()" [formGroup]="form" id="server-error">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <span class="govuk-caption-l">User account</span>
-          <h1 class="govuk-fieldset__heading">Create a username and password</h1>
+          <h1 class="govuk-fieldset__heading">Create your username and password</h1>
         </legend>
 
         <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && getUsername.errors">
@@ -91,7 +90,8 @@
           </div>
         </div>
       </fieldset>
-    </div>
+
+      <button class="govuk-button govuk-!-margin-top-4" type="submit">Continue</button>
+    </form>
   </div>
-  <app-submit-exit-buttons [return]="return"></app-submit-exit-buttons>
-</form>
+</div>
