--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -1,12 +1,12 @@
 <app-table-pagination-wrapper
-  [totalWorkerCount]="totalWorkerCount"
-  [workerCount]="workerCount"
+  [totalCount]="totalWorkerCount"
+  [count]="workerCount"
   [searchTerm]="searchTerm"
   [sortByParamMap]="sortByParamMap"
   [sortByValue]="sortByValue"
   [sortOptions]="sortStaffOptions"
   accessibleLabel="for staff records"
-  (fetchWorkers)="getPageOfWorkers($event)"
+  (fetchData)="getPageOfWorkers($event)"
 >
   <table *ngIf="workerCount; else noWorkersFound" class="govuk-table">
     <thead class="govuk-table__head">
