--- a/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
+++ b/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row govuk-util__vertical-align-center">
-  <div *ngIf="totalWorkerCount > itemsPerPage" class="govuk-grid-column-three-quarters" data-testid="search">
+  <div *ngIf="totalCount > itemsPerPage" class="govuk-grid-column-three-quarters" data-testid="search">
     <app-search-input
-      ref="trainingRecordSearch"
+      ref="search"
       [accessibleLabel]="accessibleLabel"
       [label]="label"
       [prevSearch]="searchTerm"
@@ -13,13 +13,8 @@
     class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
   >
     <div class="govuk-form-group">
-      <label class="govuk-label" for="sortByStaff"> Sort by </label>
-      <select
-        class="govuk-select govuk-!-width-full"
-        id="sortByStaff"
-        name="sortByStaff"
-        (change)="sortBy($event.target.value)"
-      >
+      <label class="govuk-label" for="sortBy"> Sort by </label>
+      <select class="govuk-select govuk-!-width-full" id="sortBy" name="sortBy" (change)="sortBy($event.target.value)">
         <option *ngFor="let option of sortOptions | keyvalue" value="{{ option.key }}">
           {{ option.value }}
         </option>
@@ -31,7 +26,7 @@
   <ng-content></ng-content>
   <app-pagination
     [itemsPerPage]="itemsPerPage"
-    [totalNoOfItems]="workerCount"
+    [totalNoOfItems]="count"
     (currentPageIndexChange)="handlePageUpdate($event)"
     [currentPageIndex]="currentPageIndex"
   ></app-pagination>
