--- a/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
+++ b/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
@@ -6,11 +6,18 @@
 >
 </app-error-summary>
 
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full-from-desktop">
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">Confirm your account details</h1>
+  </div>
+</div>
+
+<div class="govuk-!-margin-bottom-7">
+  <p>Check these details before you submit them.</p>
+</div>
+
 <div class="govuk-grid-row" id="server-error">
   <div class="govuk-grid-column-full-from-desktop">
-    <h1 class="govuk-heading-l">Confirm your account details</h1>
-    <p class="govuk-!-margin-bottom-6">Check these details before you submit them.</p>
-
     <h1 class="govuk-heading-m">User account</h1>
 
     <app-summary-list [topBorder]="true" [summaryList]="userInfo" (setReturn)="onSetReturn()"></app-summary-list>
@@ -27,37 +34,36 @@
       class="govuk-util__block govuk-!-margin-bottom-6"
       (setReturn)="onSetReturn()"
     ></app-summary-list>
-
-    <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form" id="form">
-      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
-        <fieldset class="govuk-fieldset" aria-describedby="termsAndConditions-hint">
-          <span *ngIf="submitted && form.invalid" id="termsAndConditions-error" class="govuk-error-message">
-            <span class="govuk-visually-hidden">Error:</span>
-            {{ getFirstErrorMessage('termsAndConditions') }}
-          </span>
-          <div class="govuk-checkboxes">
-            <div class="govuk-checkboxes__item">
-              <input
-                class="govuk-checkboxes__input"
-                [class.govuk-input--error]="submitted && form.errors"
-                id="termsAndConditions"
-                name="termsAndConditions"
-                type="checkbox"
-                [formControlName]="'termsAndConditions'"
-              />
-              <label class="govuk-label govuk-checkboxes__label" for="termsAndConditions">
-                I agree to the
-                <a [routerLink]="['/terms-and-conditions']" target="_blank">
-                  terms and conditions<span class="govuk-visually-hidden">, (opens in a new window)</span>
-                </a>
-                of this service.
-              </label>
-            </div>
-          </div>
-        </fieldset>
-      </div>
-
-      <button type="submit" class="govuk-button govuk-!-margin-top-4">Submit details</button>
-    </form>
   </div>
 </div>
+<form #formEl (ngSubmit)="onSubmit()" [formGroup]="form" id="form">
+  <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
+    <fieldset class="govuk-fieldset" aria-describedby="termsAndConditions-hint">
+      <span *ngIf="submitted && form.invalid" id="termsAndConditions-error" class="govuk-error-message">
+        <span class="govuk-visually-hidden">Error:</span>
+        {{ getFirstErrorMessage('termsAndConditions') }}
+      </span>
+      <div class="govuk-checkboxes">
+        <div class="govuk-checkboxes__item">
+          <input
+            class="govuk-checkboxes__input"
+            [class.govuk-input--error]="submitted && form.errors"
+            id="termsAndConditions"
+            name="termsAndConditions"
+            type="checkbox"
+            [formControlName]="'termsAndConditions'"
+          />
+          <label class="govuk-label govuk-checkboxes__label" for="termsAndConditions">
+            I agree to the
+            <a [routerLink]="['/terms-and-conditions']" target="_blank">
+              terms and conditions<span class="govuk-visually-hidden">, (opens in a new window)</span>
+            </a>
+            of this service.
+          </label>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+
+  <button type="submit" class="govuk-button govuk-!-margin-top-4">Submit details</button>
+</form>
