apply new route for activate account confirm detail

--- a/src/app/features/activate-user-account/create-username/create-username.component.html
+++ b/src/app/features/activate-user-account/create-username/create-username.component.html
@@ -91,7 +91,7 @@
         </div>
       </fieldset>
 
-      <button class="govuk-button govuk-!-margin-top-4" type="submit">Continue</button>
+      <app-registration-submit-buttons [insideFlow]="insideFlow" [returnRoute]="flow"></app-registration-submit-buttons>
     </form>
   </div>
 </div>
