--- a/src/app/features/activate-user-account/security-question/security-question.component.html
+++ b/src/app/features/activate-user-account/security-question/security-question.component.html
@@ -37,7 +37,7 @@
         </ng-container>
       </fieldset>
 
-      <button class="govuk-button govuk-!-margin-top-4" type="submit">Continue</button>
+      <app-registration-submit-buttons [insideFlow]="insideFlow" [returnRoute]="flow"></app-registration-submit-buttons>
     </form>
   </div>
 </div>
