--- a/src/app/features/activate-user-account/security-question/security-question.component.html
+++ b/src/app/features/activate-user-account/security-question/security-question.component.html
@@ -4,7 +4,7 @@
     <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <span class="govuk-caption-l">User account</span>
+          <span class="govuk-caption-l govuk-!-margin-bottom-2">User account</span>
           <h1 class="govuk-fieldset__heading">Create and answer your security question</h1>
         </legend>
 
