create and setup a test file and add some  test for create user name component

--- a/src/app/features/activate-user-account/create-username/create-username.component.html
+++ b/src/app/features/activate-user-account/create-username/create-username.component.html
@@ -86,6 +86,7 @@
               name="confirmPasswordInput"
               [class.govuk-input--error]="submitted && getConfirmPassword.errors"
               type="password"
+              data-testid="confirmpassword"
             />
           </div>
         </div>
