--- a/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
+++ b/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
@@ -61,7 +61,7 @@
           </td>
 
           <td class="govuk-table__cell">
-            <div *ngIf="trainingStatus(training) === trainingStatusService.EXPIRED" class="govuk-!-margin-bottom-1">
+            <div *ngIf="training.status === 'Expired'" class="govuk-!-margin-bottom-1">
               <img
                 src="/assets/images/flag-red.svg"
                 alt=""
@@ -69,7 +69,7 @@
               />
               1 expired
             </div>
-            <div *ngIf="trainingStatus(training) === trainingStatusService.EXPIRING">
+            <div *ngIf="training.status === 'Expires soon'">
               <img
                 src="/assets/images/flag-orange.svg"
                 alt=""
@@ -77,7 +77,7 @@
               />
               1 expires soon
             </div>
-            <div *ngIf="trainingStatus(training) === trainingStatusService.MISSING" class="govuk-!-margin-bottom-1">
+            <div *ngIf="training.status === 'Missing'" class="govuk-!-margin-bottom-1">
               <img
                 src="/assets/images/flag-red.svg"
                 alt=""
@@ -86,10 +86,10 @@
               1 missing
             </div>
 
-            <div *ngIf="trainingStatus(training) === trainingStatusService.ACTIVE">OK</div>
+            <div *ngIf="training.status === 'OK'">OK</div>
           </td>
           <td class="govuk-table__cell">
-            <div *ngIf="trainingStatus(training) === trainingStatusService.MISSING && canEditWorker">
+            <div *ngIf="training.status === 'Missing' && canEditWorker">
               <a
                 [routerLink]="[
                   '/workplace',
